--- a/nightmanager.client/src/app/component/display/display-category/display-category.component.html
+++ b/nightmanager.client/src/app/component/display/display-category/display-category.component.html
@@ -1,5 +1,5 @@
 <div class="display-category">
-  <h1 class="title">{{category?.name}}</h1>
+  <h1 class="title">{{_category?.name}}</h1>
   <div class="teams">
     <h1>Rangliste</h1>
     <table mat-table [dataSource]="teams">
@@ -11,8 +11,12 @@
         <th mat-header-cell *matHeaderCellDef>Team</th>
         <td mat-cell *matCellDef="let element"> {{element.name}}</td>
       </ng-container>
+      <ng-container matColumnDef="points">
+        <th mat-header-cell *matHeaderCellDef>Punkte</th>
+        <td mat-cell *matCellDef="let element"> {{element.points}}</td>
+      </ng-container>
       <ng-container matColumnDef="goals">
-        <th mat-header-cell *matHeaderCellDef>Team</th>
+        <th mat-header-cell *matHeaderCellDef>Goal Differenz</th>
         <td mat-cell *matCellDef="let element"> {{element.goalsShot}}:{{element.goalsGotten}}</td>
       </ng-container>
 
