add generation logic for two way semifinal

--- a/nightmanager.client/src/styles.scss
+++ b/nightmanager.client/src/styles.scss
@@ -2,3 +2,6 @@
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 // Imports functions, variables, and mixins that are needed by other Bootstrap files
 
+:root {
+  font-family: 'Roboto';
+}
