add public games overview

--- a/nightmanager.client/src/app/component/display/display-category-details/display-category-details.component.html
+++ b/nightmanager.client/src/app/component/display/display-category-details/display-category-details.component.html
@@ -58,5 +58,7 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumnsTeams;"></tr>
       </table>
     </mat-tab>
+    <mat-tab>
+    </mat-tab>
   </mat-tab-group>
 </div>
