--- a/nightmanager.client/src/app/component/display/display-games/display-games.component.scss
+++ b/nightmanager.client/src/app/component/display/display-games/display-games.component.scss
@@ -14,6 +14,12 @@
   .flex-2 {
     flex: 2;
   }
+  .flex-1 {
+    flex: 1;
+  }
+  .flex-3 {
+    flex: 3;
+  }
   .mat-cell {
     span {
       text-align: center;
