--- a/nightmanager.client/src/app/component/display/display-home/display-home.component.html
+++ b/nightmanager.client/src/app/component/display/display-home/display-home.component.html
@@ -7,7 +7,46 @@
   </div>
 </div>
 <div *ngIf="!displayMode">
-  <app-display-category-overview></app-display-category-overview>
+  <mat-tab-group>
+    <mat-tab label="Kategorien">
+      <app-display-category-overview></app-display-category-overview>
+    </mat-tab>
+    <mat-tab label="Spiele">
+      <mat-table [dataSource]="games" class="display-games" style="min-width: 700px;">
+        <ng-container cdkColumnDef="time">
+          <mat-header-cell *cdkHeaderCellDef class="flex-2"><span>Zeit</span></mat-header-cell>
+          <mat-cell *cdkCellDef="let element" class="flex-2"><span>{{element.startDate }}</span></mat-cell>
+        </ng-container>
+        <ng-container cdkColumnDef="teamHome">
+          <mat-header-cell *cdkHeaderCellDef class="flex-4"><span>Heim</span></mat-header-cell>
+          <mat-cell *cdkCellDef="let element" class="flex-4"><span>{{element.teamHome.name}}</span></mat-cell>
+        </ng-container>
+        <ng-container cdkColumnDef="goalsTeamHome">
+          <mat-header-cell *cdkHeaderCellDef><span>Tore</span></mat-header-cell>
+          <mat-cell *cdkCellDef="let element"><span>{{element.goalsTeamHome}}</span></mat-cell>
+        </ng-container>
+        <ng-container cdkColumnDef="placeholder">
+          <mat-header-cell *cdkHeaderCellDef></mat-header-cell>
+          <mat-cell *cdkCellDef="let element"><span>:</span></mat-cell>
+        </ng-container>
+        <ng-container cdkColumnDef="goalsTeamGuest">
+          <mat-header-cell *cdkHeaderCellDef><span>Tore</span></mat-header-cell>
+          <mat-cell *cdkCellDef="let element"><span>{{element.goalsTeamGuest}}</span></mat-cell>
+        </ng-container>
+        <ng-container cdkColumnDef="teamGuest">
+          <mat-header-cell *cdkHeaderCellDef class="flex-4"><span>Gast</span></mat-header-cell>
+          <mat-cell *cdkCellDef="let element" class="flex-4"><span>{{element.teamGuest.name}}</span></mat-cell>
+        </ng-container>
+        <ng-container cdkColumnDef="hall">
+          <mat-header-cell *cdkHeaderCellDef class="flex-3"><span>Halle</span></mat-header-cell>
+          <mat-cell *cdkCellDef="let element" class="flex-3"><span>{{element.hall.name}}</span></mat-cell>
+        </ng-container>
+
+        <mat-header-row *cdkHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row *cdkRowDef="let row; columns: displayedColumns;"></mat-row>
+      </mat-table>
+    </mat-tab>
+  </mat-tab-group>
 </div>
 <footer *ngIf="!displayMode">
   <button mat-button (click)="enterDisplayMode()">Anzeige Modus</button>
