--- a/nightmanager.client/src/app/component/display/display-home/display-home.component.scss
+++ b/nightmanager.client/src/app/component/display/display-home/display-home.component.scss
@@ -9,3 +9,33 @@ footer {
     width: 100%;
   }
 }
+
+.flex-4 {
+  flex: 4;
+}
+
+.flex-2 {
+  flex: 2;
+}
+
+.flex-1 {
+  flex: 1;
+}
+
+.flex-3 {
+  flex: 3;
+}
+
+.mat-cell {
+  span {
+    text-align: center;
+    width: 100%;
+  }
+}
+
+.mat-header-cell {
+  span {
+    text-align: center;
+    width: 100%;
+  }
+}
