--- a/nightmanager.client/src/app/component/display/display-category/display-category.component.html
+++ b/nightmanager.client/src/app/component/display/display-category/display-category.component.html
@@ -21,7 +21,7 @@
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumnsTeams"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumnsTeams;"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumnsTeams;" [class.red]="!row.paid"></tr>
     </table>
   </div>
   <div class="games">
