--- a/nightmanager.client/src/app/component/display/display-category-details/display-category-details.component.html
+++ b/nightmanager.client/src/app/component/display/display-category-details/display-category-details.component.html
@@ -55,7 +55,8 @@
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumnsTeams"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumnsTeams;"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumnsTeams;" [class.hidden]="row.placeholder">
+        </tr>
       </table>
     </mat-tab>
     <mat-tab>
