--- a/nightmanager.client/src/app/component/referee/referee-games/referee-game/referee-game.component.scss
+++ b/nightmanager.client/src/app/component/referee/referee-games/referee-game/referee-game.component.scss
@@ -24,6 +24,8 @@
     width: 100%;
     height: 100%;
     text-align: center;
+    white-space: nowrap;
+    overflow: scroll;
   }
   mat-icon {
     height: 100%;
