--- a/nightmanager.client/src/app/component/admin/admin-game-overview/admin-game-overview.component.html
+++ b/nightmanager.client/src/app/component/admin/admin-game-overview/admin-game-overview.component.html
@@ -4,7 +4,7 @@
     <table mat-table [dataSource]="gameHallAssingment.games">
       <ng-container matColumnDef="time">
         <th mat-header-cell *matHeaderCellDef>Zeit</th>
-        <td mat-cell *matCellDef="let element"> {{element.startDate }}</td>
+        <td mat-cell *matCellDef="let element"> {{element.startDate | date: 'HH:mm'}}</td>
       </ng-container>
       <ng-container matColumnDef="teamHome">
         <th mat-header-cell *matHeaderCellDef>Heim</th>
