--- a/nightmanager.client/src/app/component/display/display-games/display-games.component.html
+++ b/nightmanager.client/src/app/component/display/display-games/display-games.component.html
@@ -4,7 +4,7 @@
     <mat-table [dataSource]="gameHallAssingment.games">
       <ng-container cdkColumnDef="time">
         <mat-header-cell *cdkHeaderCellDef class="flex-2"><span>Zeit</span></mat-header-cell>
-        <mat-cell *cdkCellDef="let element" class="flex-2"><span>{{element.startDate }}</span></mat-cell>
+        <mat-cell *cdkCellDef="let element" class="flex-2"><span>{{element.startDate | date: 'HH:mm'}}</span></mat-cell>
       </ng-container>
       <ng-container cdkColumnDef="teamHome">
         <mat-header-cell *cdkHeaderCellDef class="flex-4"><span>Heim</span></mat-header-cell>
