--- a/nightmanager.client/src/app/component/display/display-home/display-home.component.html
+++ b/nightmanager.client/src/app/component/display/display-home/display-home.component.html
@@ -15,7 +15,8 @@
       <mat-table [dataSource]="games" class="display-games" style="min-width: 700px;">
         <ng-container cdkColumnDef="time">
           <mat-header-cell *cdkHeaderCellDef class="flex-2"><span>Zeit</span></mat-header-cell>
-          <mat-cell *cdkCellDef="let element" class="flex-2"><span>{{element.startDate }}</span></mat-cell>
+          <mat-cell *cdkCellDef="let element" class="flex-2"><span>{{element.startDate | date: 'HH:mm'}}</span>
+          </mat-cell>
         </ng-container>
         <ng-container cdkColumnDef="teamHome">
           <mat-header-cell *cdkHeaderCellDef class="flex-4"><span>Heim</span></mat-header-cell>
