--- a/nightmanager.client/src/app/component/referee/referee-games/referee-games.component.html
+++ b/nightmanager.client/src/app/component/referee/referee-games/referee-games.component.html
@@ -2,7 +2,7 @@
   <table mat-table [dataSource]="games">
     <ng-container matColumnDef="startDate">
       <th mat-header-cell *matHeaderCellDef>Zeit</th>
-      <td mat-cell *matCellDef="let element"> {{element.startDate}}</td>
+      <td mat-cell *matCellDef="let element"> {{element.startDate | date: 'HH:mm'}}</td>
     </ng-container>
     <ng-container matColumnDef="teamHome">
       <th mat-header-cell *matHeaderCellDef>Heim</th>
