--- a/nightmanager.client/src/app/component/display/display-category/display-category.component.html
+++ b/nightmanager.client/src/app/component/display/display-category/display-category.component.html
@@ -5,7 +5,7 @@
     <table mat-table [dataSource]="teams">
       <ng-container matColumnDef="index">
         <th mat-header-cell *matHeaderCellDef>Platz</th>
-        <td mat-cell *matCellDef="let element;let i = index;">{{i+1}}</td>
+        <td mat-cell *matCellDef="let element;let i = index;">{{i}}</td>
       </ng-container>
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Team</th>
