--- a/nightmanager.client/src/app/component/display/display-category-details/display-category-details.component.html
+++ b/nightmanager.client/src/app/component/display/display-category-details/display-category-details.component.html
@@ -39,7 +39,10 @@
       <table mat-table [dataSource]="teams">
         <ng-container matColumnDef="index">
           <th mat-header-cell *matHeaderCellDef>Platz</th>
-          <td mat-cell *matCellDef="let element;let i = index;">{{i+1}}</td>
+          <td mat-cell *matCellDef="let element;let i = index;">
+            <span *ngIf="element.category.state !=='FINISHED'">{{i+1}}</span>
+            <span *ngIf="element.category.state ==='FINISHED'">{{element.rank}}</span>
+          </td>
         </ng-container>
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef>Team</th>
