--- a/nightmanager.client/src/app/component/display/display-category/display-category.component.html
+++ b/nightmanager.client/src/app/component/display/display-category/display-category.component.html
@@ -5,7 +5,10 @@
     <table mat-table [dataSource]="teams">
       <ng-container matColumnDef="index">
         <th mat-header-cell *matHeaderCellDef>Platz</th>
-        <td mat-cell *matCellDef="let element;let i = index;">{{i}}</td>
+        <td mat-cell *matCellDef="let element;let i = index;">
+          <span *ngIf="_category.state !=='FINISHED'">{{i+1}}</span>
+          <span *ngIf="_category.state ==='FINISHED'">{{element.rank}}</span>
+        </td>
       </ng-container>
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Team</th>
