--- a/nightmanager.client/src/app/component/referee/referee-games/referee-games.component.html
+++ b/nightmanager.client/src/app/component/referee/referee-games/referee-games.component.html
@@ -1,3 +1,6 @@
+<mat-toolbar>
+  <button mat-button (click)="logout()">Ausloggen</button>
+</mat-toolbar>
 <div class="refree-games">
   <table mat-table [dataSource]="games">
     <ng-container matColumnDef="startDate">
@@ -6,7 +9,7 @@
     </ng-container>
     <ng-container matColumnDef="teamHome">
       <th mat-header-cell *matHeaderCellDef>Heim</th>
-      <td mat-cell *matCellDef="let element"> {{element.teamHome.name}}</td>
+      <td mat-cell *matCellDef="let element" > {{element.teamHome.name}}</td>
     </ng-container>
     <ng-container matColumnDef="teamGuest">
       <th mat-header-cell *matHeaderCellDef>Gast</th>
