mark semifinals and finals orange

--- a/nightmanager.client/src/styles.scss
+++ b/nightmanager.client/src/styles.scss
@@ -7,9 +7,21 @@
 }
 
 .red {
-  background-color: #e91e63;
+  background-color: #f48fb1;
 }
 
 .hidden {
   display: none;
+}
+
+.final {
+  background-color: #ffccbc;
+}
+
+.semi-final {
+  background-color: #ffe0b2;
+}
+
+.font-white {
+  color: white;
 }
