--- a/nightmanager.client/src/app/component/display/display-category-details/display-category-details.component.html
+++ b/nightmanager.client/src/app/component/display/display-category-details/display-category-details.component.html
@@ -12,7 +12,8 @@
         </ng-container>
         <ng-container matColumnDef="goalsTeamHome">
           <th mat-header-cell *matHeaderCellDef>Tore</th>
-          <td mat-cell *matCellDef="let element"> {{element.goalsTeamHome}}</td>
+          <td mat-cell *matCellDef="let element"
+              [class.font-white]="element.state === 'OPEN'"> {{element.goalsTeamHome}}</td>
         </ng-container>
         <ng-container matColumnDef="placeholder">
           <th mat-header-cell *matHeaderCellDef></th>
@@ -20,7 +21,8 @@
         </ng-container>
         <ng-container matColumnDef="goalsTeamGuest">
           <th mat-header-cell *matHeaderCellDef>Tore</th>
-          <td mat-cell *matCellDef="let element"> {{element.goalsTeamGuest}}</td>
+          <td mat-cell *matCellDef="let element"
+              [class.font-white]="element.state === 'OPEN'"> {{element.goalsTeamGuest}}</td>
         </ng-container>
         <ng-container matColumnDef="teamGuest">
           <th mat-header-cell *matHeaderCellDef>Gast</th>
@@ -40,7 +42,7 @@
         <ng-container matColumnDef="index">
           <th mat-header-cell *matHeaderCellDef>Platz</th>
           <td mat-cell *matCellDef="let element;let i = index;">
-            <span *ngIf="element.category.state !=='FINISHED'">{{i+1}}</span>
+            <span *ngIf="element.category.state !=='FINISHED'">{{i + 1}}</span>
             <span *ngIf="element.category.state ==='FINISHED'">{{element.rank}}</span>
           </td>
         </ng-container>
