--- a/nightmanager.client/src/app/component/display/display-category/display-category.component.html
+++ b/nightmanager.client/src/app/component/display/display-category/display-category.component.html
@@ -6,7 +6,7 @@
       <ng-container matColumnDef="index">
         <th mat-header-cell *matHeaderCellDef>Platz</th>
         <td mat-cell *matCellDef="let element;let i = index;">
-          <span *ngIf="_category.state !=='FINISHED'">{{i+1}}</span>
+          <span *ngIf="_category.state !=='FINISHED'">{{i + 1}}</span>
           <span *ngIf="_category.state ==='FINISHED'">{{element.rank}}</span>
         </td>
       </ng-container>
@@ -42,11 +42,13 @@
       </ng-container>
       <ng-container matColumnDef="teamHome">
         <th mat-header-cell *matHeaderCellDef>Heim</th>
-        <td mat-cell *matCellDef="let element"> {{element.teamHome.name}}</td>
+        <td mat-cell *matCellDef="let element" [class.semi-final]="element.type === 'SEMI_FINAL'"
+            [class.final]="element.type === 'FINAL'"> {{element.teamHome.name}}</td>
       </ng-container>
       <ng-container matColumnDef="goalsTeamHome">
         <th mat-header-cell *matHeaderCellDef>Tore</th>
-        <td mat-cell *matCellDef="let element"> {{element.goalsTeamHome}}</td>
+        <td mat-cell *matCellDef="let element"
+            [class.font-white]="element.state === 'OPEN'"> {{element.goalsTeamHome}}</td>
       </ng-container>
       <ng-container matColumnDef="placeholder">
         <th mat-header-cell *matHeaderCellDef></th>
@@ -54,11 +56,13 @@
       </ng-container>
       <ng-container matColumnDef="goalsTeamGuest">
         <th mat-header-cell *matHeaderCellDef>Tore</th>
-        <td mat-cell *matCellDef="let element"> {{element.goalsTeamGuest}}</td>
+        <td mat-cell *matCellDef="let element"
+            [class.font-white]="element.state === 'OPEN'"> {{element.goalsTeamGuest}}</td>
       </ng-container>
       <ng-container matColumnDef="teamGuest">
         <th mat-header-cell *matHeaderCellDef>Gast</th>
-        <td mat-cell *matCellDef="let element"> {{element.teamGuest.name}}</td>
+        <td mat-cell *matCellDef="let element" [class.semi-final]="element.type === 'SEMI_FINAL'"
+            [class.final]="element.type === 'FINAL'"> {{element.teamGuest.name}}</td>
       </ng-container>
       <ng-container matColumnDef="hall">
         <th mat-header-cell *matHeaderCellDef>Halle</th>
