--- a/nightmanager.client/src/app/component/display/display-games/display-games.component.html
+++ b/nightmanager.client/src/app/component/display/display-games/display-games.component.html
@@ -9,11 +9,15 @@
       </ng-container>
       <ng-container cdkColumnDef="teamHome">
         <mat-header-cell *cdkHeaderCellDef class="flex-4"><span>Heim</span></mat-header-cell>
-        <mat-cell *cdkCellDef="let element" class="flex-4" [class.red]="!element.teamHome.paid"><span>{{element.teamHome.name}}</span></mat-cell>
+        <mat-cell *cdkCellDef="let element" class="flex-4" [class.red]="!element.teamHome.paid"
+                  [class.semi-final]="element.type === 'SEMI_FINAL'"
+                  [class.final]="element.type === 'FINAL'">
+          <span>{{element.teamHome.name}}</span></mat-cell>
       </ng-container>
       <ng-container cdkColumnDef="goalsTeamHome">
         <mat-header-cell *cdkHeaderCellDef>Tore</mat-header-cell>
-        <mat-cell *cdkCellDef="let element"><span>{{element.goalsTeamHome}}</span></mat-cell>
+        <mat-cell *cdkCellDef="let element"><span
+          [class.font-white]="element.state === 'OPEN'">{{element.goalsTeamHome}}</span></mat-cell>
       </ng-container>
       <ng-container cdkColumnDef="placeholder">
         <mat-header-cell *cdkHeaderCellDef></mat-header-cell>
@@ -21,11 +25,15 @@
       </ng-container>
       <ng-container cdkColumnDef="goalsTeamGuest">
         <mat-header-cell *cdkHeaderCellDef><span>Tore</span></mat-header-cell>
-        <mat-cell *cdkCellDef="let element"><span>{{element.goalsTeamGuest}}</span></mat-cell>
+        <mat-cell *cdkCellDef="let element"><span
+          [class.font-white]="element.state === 'OPEN'">{{element.goalsTeamGuest}}</span></mat-cell>
       </ng-container>
       <ng-container cdkColumnDef="teamGuest">
         <mat-header-cell *cdkHeaderCellDef class="flex-4"><span>Gast</span></mat-header-cell>
-        <mat-cell *cdkCellDef="let element" class="flex-4" [class.red]="!element.teamGuest.paid"><span>{{element.teamGuest.name}}</span></mat-cell>
+        <mat-cell *cdkCellDef="let element" class="flex-4" [class.red]="!element.teamGuest.paid"
+                  [class.semi-final]="element.type === 'SEMI_FINAL'"
+                  [class.final]="element.type === 'FINAL'">
+          <span>{{element.teamGuest.name}}</span></mat-cell>
       </ng-container>
 
       <mat-header-row *cdkHeaderRowDef="displayedColumns"></mat-header-row>
