--- a/nightmanager.client/src/app/component/referee/referee-games/referee-games.component.html
+++ b/nightmanager.client/src/app/component/referee/referee-games/referee-games.component.html
@@ -9,7 +9,7 @@
     </ng-container>
     <ng-container matColumnDef="teamHome">
       <th mat-header-cell *matHeaderCellDef>Heim</th>
-      <td mat-cell *matCellDef="let element" > {{element.teamHome.name}}</td>
+      <td mat-cell *matCellDef="let element"> {{element.teamHome.name}}</td>
     </ng-container>
     <ng-container matColumnDef="teamGuest">
       <th mat-header-cell *matHeaderCellDef>Gast</th>
@@ -17,7 +17,9 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onGameClick(row)"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onGameClick(row)"
+        [class.semi-final]="row.type === 'SEMI_FINAL'"
+        [class.final]="row.type === 'FINAL'"></tr>
   </table>
   <mat-spinner *ngIf="games==undefined"></mat-spinner>
 </div>
