--- a/nightmanager.client/src/app/component/display/display-home/display-home.component.html
+++ b/nightmanager.client/src/app/component/display/display-home/display-home.component.html
@@ -20,11 +20,14 @@
         </ng-container>
         <ng-container cdkColumnDef="teamHome">
           <mat-header-cell *cdkHeaderCellDef class="flex-4"><span>Heim</span></mat-header-cell>
-          <mat-cell *cdkCellDef="let element" class="flex-4"><span  [class.red]="!element.teamHome.paid">{{element.teamHome.name}}</span></mat-cell>
+          <mat-cell *cdkCellDef="let element" class="flex-4" [class.semi-final]="element.type === 'SEMI_FINAL'"
+                    [class.final]="element.type === 'FINAL'"><span>{{element.teamHome.name}}</span>
+          </mat-cell>
         </ng-container>
         <ng-container cdkColumnDef="goalsTeamHome">
           <mat-header-cell *cdkHeaderCellDef><span>Tore</span></mat-header-cell>
-          <mat-cell *cdkCellDef="let element"><span  [class.red]="!element.teamGuest.paid">{{element.goalsTeamHome}}</span></mat-cell>
+          <mat-cell *cdkCellDef="let element">
+            <span>{{element.goalsTeamHome}}</span></mat-cell>
         </ng-container>
         <ng-container cdkColumnDef="placeholder">
           <mat-header-cell *cdkHeaderCellDef></mat-header-cell>
@@ -36,7 +39,9 @@
         </ng-container>
         <ng-container cdkColumnDef="teamGuest">
           <mat-header-cell *cdkHeaderCellDef class="flex-4"><span>Gast</span></mat-header-cell>
-          <mat-cell *cdkCellDef="let element" class="flex-4"><span  [class.red]="!element.teamGuest.paid">{{element.teamGuest.name}}</span></mat-cell>
+          <mat-cell *cdkCellDef="let element" class="flex-4" [class.semi-final]="element.type === 'SEMI_FINAL'"
+                    [class.final]="element.type === 'FINAL'"><span>{{element.teamGuest.name}}</span>
+          </mat-cell>
         </ng-container>
         <ng-container cdkColumnDef="hall">
           <mat-header-cell *cdkHeaderCellDef class="flex-3"><span>Halle</span></mat-header-cell>
