--- a/nightmanager.client/src/app/component/referee/referee-games/referee-game/referee-game.component.scss
+++ b/nightmanager.client/src/app/component/referee/referee-games/referee-game/referee-game.component.scss
@@ -25,7 +25,7 @@
     height: 100%;
     text-align: center;
     white-space: nowrap;
-    overflow: scroll;
+    overflow: auto;
   }
   mat-icon {
     height: 100%;
