--- a/nightmanager.client/src/app/component/referee/referee-games/referee-games.component.scss
+++ b/nightmanager.client/src/app/component/referee/referee-games/referee-games.component.scss
@@ -10,7 +10,7 @@
   td {
     text-align: center;
     white-space: nowrap;
-    overflow: scroll;
+    overflow: auto;
   }
   th {
     text-align: center;
