--- a/nightmanager.client/src/app/component/admin/admin-game-overview/admin-game-overview.component.html
+++ b/nightmanager.client/src/app/component/admin/admin-game-overview/admin-game-overview.component.html
@@ -1,3 +1,11 @@
+<div style="width: 100%;">
+  <div style="text-align: center;">
+    <p>{{miliseconds | date: 'mm:ss' }}</p>
+    <button mat-raised-button (click)="start()">Start</button>
+    <button mat-raised-button (click)="stop()">Stop</button>
+    <button mat-raised-button (click)="reset()">Reset</button>
+  </div>
+</div>
 <div class="admin-games">
   <div *ngFor="let gameHallAssingment of gamesHallAssingments" [style.width]="widthPerHallTable">
     <h1>{{gameHallAssingment.hall.name}}</h1>
@@ -13,7 +21,8 @@
       <ng-container matColumnDef="goalsTeamHome">
         <th mat-header-cell *matHeaderCellDef>Tore</th>
         <td mat-cell *matCellDef="let element"
-            [class.font-white]="element.state === 'OPEN'"> {{element.goalsTeamHome}}</td>
+            [class.font-white]="element.state === 'OPEN'"> {{element.goalsTeamHome}}
+        </td>
       </ng-container>
       <ng-container matColumnDef="placeholder">
         <th mat-header-cell *matHeaderCellDef></th>
@@ -22,7 +31,8 @@
       <ng-container matColumnDef="goalsTeamGuest">
         <th mat-header-cell *matHeaderCellDef>Tore</th>
         <td mat-cell *matCellDef="let element"
-            [class.font-white]="element.state === 'OPEN'"> {{element.goalsTeamGuest}}</td>
+            [class.font-white]="element.state === 'OPEN'"> {{element.goalsTeamGuest}}
+        </td>
       </ng-container>
       <ng-container matColumnDef="teamGuest">
         <th mat-header-cell *matHeaderCellDef>Gast</th>
@@ -36,7 +46,7 @@
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="{gray: row.state == 'DONE'}"></tr>
     </table>
   </div>
 </div>
