--- a/nightmanager.client/src/app/component/display/display-games/display-games.component.html
+++ b/nightmanager.client/src/app/component/display/display-games/display-games.component.html
@@ -7,6 +7,10 @@
         <mat-header-cell *cdkHeaderCellDef class="flex-2"><span>Zeit</span></mat-header-cell>
         <mat-cell *cdkCellDef="let element" class="flex-2"><span>{{element.startDate | date: 'HH:mm'}}</span></mat-cell>
       </ng-container>
+      <ng-container cdkColumnDef="category">
+        <mat-header-cell *cdkHeaderCellDef class="flex-2"><span>Kategorie</span></mat-header-cell>
+        <mat-cell *cdkCellDef="let element" class="flex-2"><span>{{element.category.name}}</span></mat-cell>
+      </ng-container>
       <ng-container cdkColumnDef="teamHome">
         <mat-header-cell *cdkHeaderCellDef class="flex-4"><span>Heim</span></mat-header-cell>
         <mat-cell *cdkCellDef="let element" class="flex-4" [class.red]="!element.teamHome.paid"
