--- a/nightmanager.client/src/app/component/referee/referee-games/referee-game/referee-game-confirm-dialog/referee-game-confirm-dialog.component.html
+++ b/nightmanager.client/src/app/component/referee/referee-games/referee-game/referee-game-confirm-dialog/referee-game-confirm-dialog.component.html
@@ -1,11 +1,20 @@
-<div class="referee-game-confirm-dialog">
+<div *ngIf="!team1Confirms || !team2Confirms" class="referee-game-confirm-dialog">
+  <div *ngIf="!team1Confirms" style="max-width: 100%"><p>{{game.teamHome.name}}: {{game.goalsTeamHome}} Tore </p>
+    <button mat-button style="max-width: 100%" style="display: inline-block" (click)="team1Confirms=true">OK!</button>
+  </div>
+  <div *ngIf="!team2Confirms" style="max-width: 100%"><p>{{game.teamGuest.name}}: {{game.goalsTeamGuest}} Tore </p>
+    <button mat-button style="display: inline-block" (click)="team2Confirms=true">OK!</button>
+  </div>
+</div>
+
+<div *ngIf="team1Confirms && team2Confirms" class="referee-game-confirm-dialog">
   <div>
     <p>{{text}}</p>
   </div>
   <div>
     <button mat-flat-button (click)="confirm()">Abschliessen</button>
   </div>
-  <div>
-    <button mat-flat-button (click)="cancel()">Abbrechen</button>
-  </div>
+</div>
+<div class="referee-game-confirm-dialog">
+  <button mat-flat-button (click)="cancel()">Abbrechen</button>
 </div>
