mark current game in display red

--- a/src/main/angular/src/app/component/display/display-home/display-home.component.scss
+++ b/src/main/angular/src/app/component/display/display-home/display-home.component.scss
@@ -5,9 +5,14 @@ footer {
   height: 40px;
   width: 100%;
   overflow: hidden;
+
   button {
     width: 50%;
   }
+}
+
+.live-game {
+  background-color: #ff7961;
 }
 
 .flex-4 {
