--- a/src/main/angular/src/app/component/display/display-home/display-home.component.html
+++ b/src/main/angular/src/app/component/display/display-home/display-home.component.html
@@ -57,7 +57,7 @@
         </ng-container>
 
         <mat-header-row *cdkHeaderRowDef="displayedColumns"></mat-header-row>
-        <mat-row *cdkRowDef="let row; columns: displayedColumns;"></mat-row>
+        <mat-row *cdkRowDef="let row; columns: displayedColumns;" [class.live-game]="row.live"></mat-row>
       </mat-table>
     </mat-tab>
   </mat-tab-group>
