--- a/src/main/angular/src/app/component/admin/admin-home/admin-home.component.html
+++ b/src/main/angular/src/app/component/admin/admin-home/admin-home.component.html
@@ -8,4 +8,7 @@
   <mat-tab label="Teams">
     <app-admin-teams></app-admin-teams>
   </mat-tab>
+  <mat-tab label="Chat">
+    <app-admin-chat></app-admin-chat>
+  </mat-tab>
 </mat-tab-group>
