--- a/src/main/angular/src/app/component/display/display-live-game/display-live-game.component.html
+++ b/src/main/angular/src/app/component/display/display-live-game/display-live-game.component.html
@@ -34,7 +34,7 @@
   </ng-template>
 </div>
 <ng-template #add>
-  <div>
+  <div class="add">
     <img [src]="adds[addCount % adds.length]">
   </div>
 </ng-template>
