--- a/src/main/angular/src/app/component/display/display-live-game/display-live-game.component.scss
+++ b/src/main/angular/src/app/component/display/display-live-game/display-live-game.component.scss
@@ -1,12 +1,12 @@
 :host {
-  min-height: 100vh;
-  width: 100%;
+  min-height: calc(100vh - 16px);
+  max-height: calc(100vw - 16px);
   display: block;
 }
 
 .grid {
-  min-height: 100vh;
-  width: 100%;
+  min-height: calc(100vh - 16px);
+  max-height: calc(100vw - 16px);
   display: grid;
   grid-template-rows: 60% 40%;
   grid-template-columns: 40% 10% 40%;
@@ -21,13 +21,27 @@ h1 {
 h2 {
   font-size: 64px;
 }
+
 .no-live-game {
   font-size: 64px;
-  min-height: 100vh;
-  max-height: 100vh;
+  min-height: calc(100vh - 16px);
+  max-height: calc(100vw - 16px);
   width: 100%;
   text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.add {
+  height: calc(100vh - 16px);
+  width: calc(100vw - 16px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  img {
+    max-height: 100%;
+    max-width: 100%;
+  }
 }
