--- a/src/main/angular/src/app/app.component.scss
+++ b/src/main/angular/src/app/app.component.scss
@@ -12,4 +12,9 @@ app-sidenav {
   width: 100%;
   display: flex;
   flex-direction: column;
+  height: 100%;
+
+  button {
+    margin-top: 30px;
+  }
 }
