--- a/src/main/angular/src/app/component/display/display-games/display-games.component.html
+++ b/src/main/angular/src/app/component/display/display-games/display-games.component.html
@@ -9,7 +9,7 @@
       </ng-container>
       <ng-container cdkColumnDef="category">
         <mat-header-cell *cdkHeaderCellDef class="flex-2"><span>Kategorie</span></mat-header-cell>
-        <mat-cell *cdkCellDef="let element" class="flex-2"><span>{{element.category.name}}</span></mat-cell>
+        <mat-cell *cdkCellDef="let element" class="flex-2"><span>{{element?.category?.name}}</span></mat-cell>
       </ng-container>
       <ng-container cdkColumnDef="teamHome">
         <mat-header-cell *cdkHeaderCellDef class="flex-4"><span>Heim</span></mat-header-cell>
@@ -21,7 +21,8 @@
       <ng-container cdkColumnDef="goalsTeamHome">
         <mat-header-cell *cdkHeaderCellDef>Tore</mat-header-cell>
         <mat-cell *cdkCellDef="let element"><span
-          [class.font-white]="element.state === 'OPEN'">{{element.goalsTeamHome}}</span></mat-cell>
+          [class.font-white]="element.state === 'OPEN' || element.teamHome.name === 'Pause'">{{element.goalsTeamHome}}</span>
+        </mat-cell>
       </ng-container>
       <ng-container cdkColumnDef="placeholder">
         <mat-header-cell *cdkHeaderCellDef></mat-header-cell>
@@ -30,7 +31,8 @@
       <ng-container cdkColumnDef="goalsTeamGuest">
         <mat-header-cell *cdkHeaderCellDef><span>Tore</span></mat-header-cell>
         <mat-cell *cdkCellDef="let element"><span
-          [class.font-white]="element.state === 'OPEN'">{{element.goalsTeamGuest}}</span></mat-cell>
+          [class.font-white]="element.state === 'OPEN' || element.teamGuest.name === 'Pause'">{{element.goalsTeamGuest}}</span>
+        </mat-cell>
       </ng-container>
       <ng-container cdkColumnDef="teamGuest">
         <mat-header-cell *cdkHeaderCellDef class="classflex-4"><span>Gast</span></mat-header-cell>
