--- a/src/main/angular/src/app/component/admin/admin-chat/admin-chat.component.html
+++ b/src/main/angular/src/app/component/admin/admin-chat/admin-chat.component.html
@@ -1,6 +1,4 @@
-<div class="chats">
-  <div *ngFor="let hall of halls">
-    <h1>{{hall.name}}</h1>
-    <app-referee-chat [hallId]="hall.id" creator="ADMIN"></app-referee-chat>
-  </div>
+<div *ngFor="let hall of halls" class="chat">
+  <h1 style="height: 2em">{{hall.name}}</h1>
+  <app-referee-chat [hallId]="hall.id" creator="ADMIN"></app-referee-chat>
 </div>
