--- a/src/main/angular/src/app/component/admin/admin-game-overview/admin-game-overview.component.scss
+++ b/src/main/angular/src/app/component/admin/admin-game-overview/admin-game-overview.component.scss
@@ -1,20 +1,29 @@
+:host {
+  display: block;
+}
+
 .admin-games {
   width: 100%;
+  display: flex;
+  gap: 10px;
+
   div {
-    float: left;
-    margin: 1%;
+
     h1 {
       width: 100%;
       text-align: center;
     }
+
     table {
       width: 100%;
     }
   }
+
   .mat-cell {
     text-align: center;
     width: 20%;
   }
+
   .mat-header-cell {
     text-align: center;
     width: 20%;
@@ -23,4 +32,8 @@
 
 .gray {
   background-color: #c2c2c2;
+}
+
+.live {
+  background-color: #ff7961;
 }
