--- a/src/main/angular/src/app/component/display/display-category-details/display-category-details.component.html
+++ b/src/main/angular/src/app/component/display/display-category-details/display-category-details.component.html
@@ -1,5 +1,5 @@
-<div class="display-details-category">
-  <mat-tab-group>
+<div class="display-details-category hide-print ">
+  <mat-tab-group [(selectedIndex)]="selectedIndex">
     <mat-tab label="Spiele">
       <table mat-table [dataSource]="games">
         <ng-container matColumnDef="time">
@@ -67,4 +67,18 @@
     <mat-tab>
     </mat-tab>
   </mat-tab-group>
+</div>
+<div class="visible-print">
+  <table class="print-table">
+    <thead>
+    <tr>
+      <td>Rang</td>
+      <td>Name</td>
+    </tr>
+    </thead>
+    <tr *ngFor="let team of teams">
+      <td>{{team.rank}}</td>
+      <td>{{team.name}}</td>
+    </tr>
+  </table>
 </div>
