--- a/src/main/angular/src/app/component/display/display-games/display-games.component.html
+++ b/src/main/angular/src/app/component/display/display-games/display-games.component.html
@@ -1,5 +1,5 @@
 <div class="display-games">
-  <h1 style="width:100%; text-align:center;">Aktuelle Spiele</h1>
+  <h1 class="title">Aktuelle Spiele</h1>
   <div *ngFor="let gameHallAssingment of gamesHallAssingments" [style.width]="widthPerHallTable">
     <h1>{{gameHallAssingment.hall.name}}</h1>
     <mat-table [dataSource]="gameHallAssingment.games">
